# Fte

./: .env.example  .gitignore  CLAUDE.md  README.md  audit_report.py  base_watcher.py  config_parser.py  dashboard_updater.py  ecosystem.config.js  facebook_poster.py  get_refresh_token.py  gmail_watcher.py  graceful_degradation.py  linkedin_post_watcher.py  linkedin_poster.py  main.py  odoo_bill_watcher.py  odoo_invoice_agent.py  odoo_invoice_watcher.py  orchestrator.py  orchestrator_full_backup.py  pyproject.toml  retry_handler.py  scheduler_watcher.py  send_mail_watcher.py  skills-lock.json  social_post_watcher.py  subscription_auditor.py  test_extract.py  test_filter.py  watchdog.py  watchdog_runner.py  whatsapp_watcher.py  x_poster.py
.claude/: settings.local.json
.linkedin_poster_profile/: Last Browser  Local State  first_party_sets.db
.linkedin_poster_profile/Default/: DIPS  Favicons  History  Login Data  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data
.linkedin_poster_profile/GrShaderCache/: data_0  data_1  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  index
.linkedin_poster_profile/GraphiteDawnCache/: data_1  index
.linkedin_poster_profile/ShaderCache/: data_1  index
.linkedin_poster_profile/segmentation_platform/: ukm_db
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md  Rates.md
AI_Employee_Vault/.obsidian/: graph.json  workspace.json
fte-ui/: next.config.ts  package-lock.json  package.json
send_invoices/: INV-2026-04-11-004.md
(+500 files in other folders)
